# NexusGear

./: .cursorignore  .env  .gitignore  Dockerfile  README.md  ROADMAP.md  context_for_ai.txt  docker-compose.yml  env.example  project_structure.txt  pyproject.toml  requirements.txt
. vscode/: settings.json
.github/workflows/: ci.yml  docker.yml  frontend.yml  release.yml
alembic/: env.py
alembic/versions/: 096975d6f6e0_change_user_id_in_orders_to_biginteger.py  8a1c0e53a79c_change_user_id_in_orders_to_biginteger.py  9d604a99b1bd_create_order_and_order_item_tables.py  e618dee4ba2c_create_order_and_order_item_tables.py  e964ffd94685_create_initial_tables_for_users_.py
scripts/: clear_db.py  seed_db.py
src/application/: bot.py
src/application/contracts/ai/: ai_consultant.py
src/application/contracts/cart/: cart_repository.py
src/application/contracts/notifications/: notifier.py
src/application/contracts/order/: create_order.py  order_repository.py
src/application/contracts/persistence/: uow.py
src/application/interfaces/repositories/: category_repository.py  product_repository.py  user_repository.py
src/application/services/: ai_consultant.py  catalog.py  order_service.py  user_service.py
src/bot/core/: config.py  db.py
src/bot/handlers/: __main__.py  start.py
src/bot/models/: base.py
src/domain/entities/: cart_item.py  category.py  order.py  order_item.py  product.py  user.py
src/infrastructure/: config.py
src/infrastructure/ai/: gemini_client.py
src/infrastructure/database/: uow.py
src/infrastructure/database/models/: __init__.py  base.py  category.py  order.py  order_item.py  product.py  user.py
src/infrastructure/database/repositories/: category_repository.py  order_repository.py  product_repository.py  user_repository.py
src/infrastructure/di/: providers.py
src/infrastructure/logging/: setup.py
src/infrastructure/memory/: cart_repository.py
src/infrastructure/telegram/: notifier.py
src/presentation/: bot.py  di.py  middlewares.py
src/presentation/handlers/: ai_consultant.py  cart.py  catalog.py  common.py
src/presentation/web/: api_handlers.py  app.py  app_keys.py  errors.py  middlewares.py
src/presentation/web/api/handlers/: category.py  product.py
src/presentation/web/api/schemas/: category.py  order.py  product.py
src/presentation/web/auth/: telegram.py
src/presentation/web/static/: admin.css  admin.html  admin.js  index.html  order_form.css  order_form.html  order_form.js
src/presentation/web/static/assets/: index-B6kViC0T.css  index-BMqmno6i.css  index-BwnbowjH.js  index-D4_MgjqZ.js  index-DC3hSb5N.css  index-DqKIGhEC.js
tests/: conftest.py
tests/application/services/: test_order_service.py
tests/e2e/: test_admin_filters.py  test_checkout_errors.py  test_full_twa_flow.py  test_happy_path.py  test_order_full.py  test_order_notification.py
vue-project/: index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js
vue-project/src/: App.vue  main.js
vue-project/src/components/: CategoryCard.vue  ProductCard.vue  SkeletonBlock.vue  ToastHost.vue
vue-project/src/components/admin/: AdminNav.vue
vue-project/src/i18n/: index.js
vue-project/src/lib/: phone.js  phone.test.js  twaCloud.js  twaTheme.js
vue-project/src/router/: index.js
vue-project/src/stores/: auth.js  cart.js  cart.test.js  catalog.js  ui.js
vue-project/src/styles/: global.css
vue-project/src/types/: env.d.ts
vue-project/src/views/: CartView.vue  CategoriesView.vue  ProductsView.vue  SuccessView.vue
vue-project/src/views/admin/: AdminCategories.vue  AdminDashboard.vue  AdminOrderDetails.vue  AdminOrders.vue  AdminProducts.vue
