[tool.poetry]
name = "nexus-gear"
version = "0.1.0"
description = "Telegram Bot on Clean Architecture"
authors = ["AI Orchestrator <orchestrator@ai-nexus.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
aiogram = "^3.4.1"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.41"}
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
dishka = "^1.1.0"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"